		Ported to work on FreeBSD.

	mbpasswd:
		Ported to work on FreeBSD.

	mbfile:
		All path string variables are now of length PATH_MAX.
		Added list file areas.

	fbutil:
		Removed list file areas.

	htmldoc:
		Upgraded the FTSC documents to the current state.


v0.33.19        26-Oct-2001

	general:
		Made the Makefile system more simple.

	lang:
		Changed language prompt 71.
		Added language prompts 472 and 473 for FS editor.
		Added language prompts 474 and 475 for address entry.

	examples:
		SAVE:
		Changed menu setup.mnu and textfiles setup.* to show the new
		setup entries for the users.

	mbsetup:
		Changed usereditor, new layout, added new settings and
		changed password reset function. The system password is
		now also updated.
		Added setup item for menus 317 and 318.
		Changed the order of menu 1, global settings. The screens are
		now in a more logical order for a first system setup.

	mbsebbs:
		Added menu 317, change FS editor shortcut keys to (Emacs/
		Wordstar) style.
		Added menu 318, change users address.
		Added control-U 4, ON/OFF for FS edit Emacs shortcut keys.
		Now updates the lastcaller information when a call is finished
		and now also sets all the action bits what the user has been
		doing. Also time online is correct now.
		Added control-U 5, 6, 7, display users address lines 1, 2
		and 3.
		If a user doesn't have a .signature file in his homedir, a
		simple one will be created.
		If a user saves a new message at the bbs, the message will be
		signed using the .signature file.
		Patches from Bobby Cabral:
		- Fixed display file with more that stopped after every line.
		- Added display file "mainlogo" before the "welcome" file.
		- Added display files "welcome2..9" after "welcome1" file.

	mbtask:
		Changed to handle the External Doors flag in the lastcaller
		information.

	mbmon:
		Changed the lastcaller screen to display the External Door
		information.
		When lastcaller info is scrolling, the lines are first proper
		erased.
