@@ -2,7 +2,7 @@
 <HEAD>
 <META http-equiv="Content-Type" content="text/html; charset=ISO 8859-1">
 <META http-equiv="Content-Style-Type" content="text/css">
-<META name="author" lang="en" "content="Michiel Broek">
+<META name="author" lang="en" "content=Michiel Broek">
 <META name="copyright" lang="en" content="Copyright Michiel Broek">
 <META name="description" lang="en" content="MBSE BBS Manual">
 <META name="keywords" lang="en" content="MBSE BBS, MBSE, BBS, manual, fido, fidonet, gateway, tosser, mail, tic, mailer">
@@ -11,7 +11,7 @@
 </HEAD>
 <BODY>
 <BLOCKQUOTE>
-<h5>Last update 31-Jan-2001</h5>
+<h5>Last update 09-Nov-2001</h5>
 <P>&nbsp;<P>
 
 <H1>mbsebbs - The main BBS program</H1>
@@ -72,10 +72,19 @@ screens are searched for in the following order;<br>
   <li>filename.asc in the default language directory.
   <li>If nothing is found, nothing is displayed.
 </ol>
+<strong>mainlogo</strong>. Here you can put a logo or something.
 <strong>welcome</strong>. This screen can contain information about the session
 the user has, his download limits, time left etc.
 <P>
 <strong>welcome1</strong> is shown if the user has show bulletins set to true.
+<strong>welcome2</strong> is shown if the user has show bulletins set to true.
+<strong>welcome3</strong> is shown if the user has show bulletins set to true.
+<strong>welcome4</strong> is shown if the user has show bulletins set to true.
+<strong>welcome5</strong> is shown if the user has show bulletins set to true.
+<strong>welcome6</strong> is shown if the user has show bulletins set to true.
+<strong>welcome7</strong> is shown if the user has show bulletins set to true.
+<strong>welcome8</strong> is shown if the user has show bulletins set to true.
+<strong>welcome9</strong> is shown if the user has show bulletins set to true.
 <P>
 <strong>birthday</strong> is shown if the user logs in at his birthday and if he
 has show bullentins set to true.
