@@ -475,3 +475,5 @@ YN|Adjuntar fichero [s/N]:
 |Your address, maximum 3 lines (only visible for the sysop):
 |You need to enter your address here
 |Old address:
+|Use your alias (
+YN|) to post this message [Y/n]: 
